--- a/OpencvCpp/OpenCV3编程入门/16_程序的载入显示与输出/16_程序的载入显示与输出.vcxproj
+++ b/OpencvCpp/OpenCV3编程入门/16_程序的载入显示与输出/16_程序的载入显示与输出.vcxproj
@@ -21,10 +21,9 @@
   <PropertyGroup Label="Globals">
     <VCProjectVersion>16.0</VCProjectVersion>
     <Keyword>Win32Proj</Keyword>
-    <ProjectGuid>{a427298c-d99a-48ec-b7ba-5cecad1b0d9c}</ProjectGuid>
-    <RootNamespace>My16利用imwrite生成透明png图像</RootNamespace>
+    <ProjectGuid>{e03d6540-fec0-4c3c-9a3c-5f2afbfd07bd}</ProjectGuid>
+    <RootNamespace>My16程序的载入显示与输出</RootNamespace>
     <WindowsTargetPlatformVersion>10.0</WindowsTargetPlatformVersion>
-    <ProjectName>15_利用imwrite生成透明png图像</ProjectName>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'" Label="Configuration">
